Fix contact spacing and sponsor links

--- a/src/components/sponsors/sponsor.module.css
+++ b/src/components/sponsors/sponsor.module.css
@@ -87,14 +87,17 @@
 
 .mainLink {
     align-content: center;
+    font-size: 18px;
 }
 
 .links, .mainLink
 {
     text-align: center;
+    
 }
 .links > p
 {
     display: inline-flex;
     flex-direction: column;
+    font-size: 16px;
 }
